--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rights\FolderPermissions.cs" />
     <Compile Include="Rights\PermissionManager.cs" />
+    <Compile Include="UserProfileModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CHAOS.MCM.Data.DTO\CHAOS.MCM.Data.DTO.csproj">
